--- a/src/compnents/loader/loader.css
+++ b/src/compnents/loader/loader.css
@@ -1,7 +1,8 @@
 .loader-top{
     width: 5vw;
     height: 5vh;
-    background-color: blue;
+	margin: 0 auto;
+	align-items: center;
 }
 
 #loading-indicator{
